Fix recipe position on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,3 +46,10 @@ body {
     width: 300px;
     height: 132px;
 }
+
+@media only screen and (max-width: 600px) {
+    .recipe-repo {
+        width: 90%;
+        margin: auto;
+    }
+}
